# problem-template-python

./: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: docker_push.yml
example_problem/: main.py
example_problem/evaluator/: main.py
example_problem/validators/: example_env.py  variable.py
tests/: test_main.py
tests/evaluator/: test_main.py
tests/validators/: test_example_env.py  test_variable.py
